package com.cpz.processing.controls.checkboxcontrol.style;

public record CheckboxRenderStyle(int boxFillColor,
                                  int borderColor,
                                  float borderWidth,
                                  float cornerRadius,
                                  boolean showCheck,
                                  int checkColor,
                                  float checkInset,
                                  float checkStrokeWeight) {
}
