package com.cpz.processing.controls.checkboxcontrol.view;

/**
 * @author CPZ
 */
public record CheckboxViewState(float x,
                                float y,
                                float width,
                                float height,
                                boolean checked,
                                boolean hovered,
                                boolean pressed,
                                boolean enabled) {
}
